--- a/.classpath
+++ b/.classpath
@@ -2,5 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
+	<classpathentry kind="lib" path="G:/AAA ------------- 4th Semester/Java/CSE2211 Object Oriented Programming and Design Methods/Demo1/courserajava.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
